--- a/invenio_swh/templates/invenio_swh/base.html
+++ b/invenio_swh/templates/invenio_swh/base.html
@@ -1,4 +1,5 @@
 {#
+  Copyright (C) 2020 CERN
   Copyright (C) 2020 Cottage Labs LLP.
 
   invenio-swh is free software; you can redistribute it and/or modify it
